Ensure species not overlapped

--- a/src/components/species/index.module.css
+++ b/src/components/species/index.module.css
@@ -21,6 +21,7 @@
         cursor: pointer;
         transition: 0.5s;
         pointer-events: all;
+        z-index: 10;
 
         &.preEnter,
         &.exiting {
